fixed unecessary code overflow in card drop position

--- a/styles.css
+++ b/styles.css
@@ -319,13 +319,16 @@ main{
 	height: var(--card-height);
 	width: var(--card-width);
 	position: relative;
-	display: none;
-	display: flex;
+	display: flex; 
 	justify-content: center;
 	align-items: center;
-	text-align: center;
 	color: grey;
 	opacity: 0.7;
+}
+
+#card-drop-position > #matcher {
+	text-align: center;
+	vertical-align: middle;
 }
 
 #card-drop-position.dragged-over{
